// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addSemgrepWorkflowYml file added 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Semgrep
on:
  schedule:
    - cron: 0 0 * * MON-FRI
  pull_request:
    branches:
      - main
jobs:
  semgrep:
    name: Scan
    runs-on: ubuntu-latest
    steps:
      - name: Checkout repository
        uses: actions/checkout@v3
      - name: Run Semgrep CI
        run: semgrep ci
        env:
          SEMGREP_APP_TOKEN: \${{ secrets.SEMGREP_APP_TOKEN }}
"
`;

exports[`addSemgrepWorkflowYml override 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Semgrep
on:
  schedule:
    - cron: 0 0 * * MON-FRI
  pull_request:
    branches:
      - main
jobs:
  semgrep:
    name: Scan
    runs-on: ubuntu-latest
    steps:
      - name: Checkout repository
        uses: actions/checkout@v3
      - name: Run Semgrep CI
        run: semgrep ci
        env:
          SEMGREP_APP_TOKEN: \${{ secrets.SEMGREP_APP_TOKEN }}
foo: bar
"
`;
